--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav id="desktop-nav">
+    <nav id="desktop-nav" class="dark-nav">
         <div class="logo">Afnan Abdullahi</div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
@@ -40,7 +40,7 @@
     <section id="profile">
         <div class="profile-content">
             <div class="profile-pic-container">
-                <img src="./assets/profile-pic.png" alt="Afnan Abdullahi profile picture" />
+                <img src="https://via.placeholder.com/150" alt="Afnan Abdullahi profile picture" />
             </div>
             <div class="profile-text">
                 <p class="hello-text">Hello, I'm</p>
@@ -64,7 +64,7 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic" />
+                <img src="https://via.placeholder.com/150" alt="Profile picture" class="about-pic" />
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
@@ -92,54 +92,81 @@
     <!-- Experience Section -->
     <section id="experience" class="mint-green">
         <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
+        <h1 class="title">Skills</h1>
         <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container">
-                    <h2 class="experience-sub-title">Data Scientist and Operational Strategist</h2>
-                    <div class="article-container">
-                        <article>
-                            <i class="fas fa-check icon"></i>
-                            <div>
-                                <h3>PaySii (FinTech Startup)</h3>
-                                <p>May 2022 – Present</p>
-                                <p>Designed and developed comprehensive dashboards on PowerBI, presenting daily and monthly performance reports to the board, enhancing data-driven decision-making at the executive level.</p>
-                                <p>Led cross-functional analytics integration, improving user satisfaction and retention.</p>
-                                <p>Collaborated with cross-functional teams to integrate analytics findings into new app feature creation, boosting user satisfaction and retention rates.</p>
-                                <p>Conducted cohort analysis to evaluate customer retention and churn rates, utilizing Python and heatmaps.</p>
-                            </div>
-                        </article>
+            <div class="skills-box">
+                <div class="column">
+                    <div class="skill-item">
+                        <i class="fas fa-chart-line icon"></i>
+                        <div>
+                            <h3>Data Visualization</h3>
+                            <p>Experienced</p>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-robot icon"></i>
+                        <div>
+                            <h3>Machine Learning</h3>
+                            <p>Experienced</p>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-code icon"></i>
+                        <div>
+                            <h3>Programming</h3>
+                            <p>Experienced</p>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-chart-pie icon"></i>
+                        <div>
+                            <h3>Statistical Analysis</h3>
+                            <p>Experienced</p>
+                        </div>
                     </div>
                 </div>
-                <div class="details-container">
-                    <h2 class="experience-sub-title">Marketing Strategy Specialist</h2>
-                    <div class="article-container">
-                        <article>
-                            <i class="fas fa-check icon"></i>
-                            <div>
-                                <h3>GHA</h3>
-                                <p>December 2022 – November 2023</p>
-                                <p>Provided strategic marketing insights and conducted advanced qualitative research to refine campaign strategies, significantly increasing donor engagement.</p>
-                                <p>Collaborated with medical teams to facilitate the adoption of new technologies and software, enhancing overall operational efficiency and staff competency.</p>
-                                <p>Designed impactful marketing materials that successfully generated over $200,000 in funds, substantially supporting the organization's humanitarian missions.</p>
-                            </div>
-                        </article>
+                <div class="column">
+                    <div class="skill-item">
+                        <i class="fas fa-database icon"></i>
+                        <div>
+                            <h3>Data Wrangling</h3>
+                            <p>Intermediate</p>
+                        </div>
                     </div>
-                </div>
-                <div class="details-container">
-                    <h2 class="experience-sub-title">Research Assistant</h2>
-                    <div class="article-container">
-                        <article>
-                            <i class="fas fa-check icon"></i>
-                            <div>
-                                <h3>Cognitive Neuroscience Lab, City, University of London</h3>
-                                <p>September 2019 – July 2021</p>
-                                <p>Worked closely with the research team to design and implement experiments that deepened our understanding of cognitive processes and their neural bases.</p>
-                                <p>Applied expertise in SPSS and statistical analysis to interpret behavioral data, driving new discoveries in cognitive neuroscience.</p>
-                                <p>Utilized Qualtrics for survey design and data collection, ensuring robust and comprehensive data acquisition for studies.</p>
-                                <p>Managed data cleansing to maintain the integrity and accuracy of datasets, crucial for research accuracy.</p>
-                            </div>
-                        </article>
+                    <div class="skill-item">
+                        <i class="fas fa-server icon"></i>
+                        <div>
+                            <h3>Big Data Technologies</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-brain icon"></i>
+                        <div>
+                            <h3>Artificial Intelligence</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-chart-line icon"></i>
+                        <div>
+                            <h3>Predictive Analytics</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-language icon"></i>
+                        <div>
+                            <h3>Natural Language Processing</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-project-diagram icon"></i>
+                        <div>
+                            <h3>Deep Learning</h3>
+                            <p>Intermediate</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -155,136 +182,29 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+                        <img src="https://via.placeholder.com/300" alt="Project 1" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Credit Card Fraud Detection</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-                            Github
-                        </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-                            Live Demo
-                        </button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                     <p>Developed a high-accuracy machine learning model to detect fraudulent credit card transactions, achieving over 95% accuracy.</p>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
+                        <img src="https://via.placeholder.com/300" alt="Project 2" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Healthcare Networks for Stroke Prevention and Management</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-                            Github
-                        </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-                            Live Demo
-                        </button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                     <p>Constructed and analyzed a healthcare interaction network to optimize stroke prevention and management strategies, utilizing patient data and predictive models.</p>
                 </div>
             </div>
         </div>
         <i class="fas fa-arrow-down icon arrow" onclick="location.href='#contact'"></i>
-    </section>
-
-    <!-- Skills Section -->
-    <section id="skills" class="mint-green">
-        <h1>Skills</h1>
-        <div class="carousel-container">
-            <div class="carousel">
-                <!-- Data Visualization -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">01</div>
-                        <i class="fas fa-chart-bar icon"></i>
-                        <h3>Data Visualization</h3>
-                        <p>Creating insightful and interactive visualizations using tools like Tableau and Power BI.</p>
-                    </div>
-                </div>
-                <!-- Machine Learning -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">02</div>
-                        <i class="fas fa-robot icon"></i>
-                        <h3>Machine Learning</h3>
-                        <p>Developing and deploying machine learning models for predictive analytics.</p>
-                    </div}
-                </div>
-                <!-- Programming -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">03</div>
-                        <i class="fas fa-code icon"></i>
-                        <h3>Programming</h3>
-                        <p>Proficient in Python, SQL, and C++ for data analysis and software development.</p>
-                    </div>
-                </div>
-                <!-- Statistical Analysis -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">04</div>
-                        <i class="fas fa-chart-line icon"></i>
-                        <h3>Statistical Analysis</h3>
-                        <p>Applying statistical techniques to derive insights from data.</p>
-                    </div>
-                </div>
-                <!-- Data Wrangling -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">05</div>
-                        <i class="fas fa-database icon"></i>
-                        <h3>Data Wrangling</h3>
-                        <p>Cleaning and preparing data for analysis.</p>
-                    </div>
-                </div>
-                <!-- Big Data Technologies -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">06</div>
-                        <i class="fas fa-server icon"></i>
-                        <h3>Big Data Technologies</h3>
-                        <p>Utilizing frameworks like Hadoop and Spark for handling large datasets.</p>
-                    </div>
-                </div>
-                <!-- Artificial Intelligence -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">07</div>
-                        <i class="fas fa-brain icon"></i>
-                        <h3>Artificial Intelligence</h3>
-                        <p>Implementing AI methods to automate complex tasks.</p>
-                    </div>
-                </div>
-                <!-- Predictive Analytics -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">08</div>
-                        <i class="fas fa-chart-pie icon"></i>
-                        <h3>Predictive Analytics</h3>
-                        <p>Using historical data to predict future outcomes.</p>
-                    </div>
-                </div>
-                <!-- Natural Language Processing -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">09</div>
-                        <i class="fas fa-language icon"></i>
-                        <h3>Natural Language Processing</h3>
-                        <p>Processing and analyzing large amounts of natural language data.</p>
-                    </div>
-                </div>
-                <!-- Deep Learning -->
-                <div class="carousel-item">
-                    <div class="content">
-                        <div class="number">10</div>
-                        <i class="fas fa-network-wired icon"></i>
-                        <h3>Deep Learning</h3>
-                        <p>Designing and training deep neural networks for advanced pattern recognition.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
 
     <!-- Contact Section -->
