--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <section id="about" class="sage-green">
         <p class="section__text__p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
-        <div class="section-container">
-            <div class="section__pic-container">
+        <div class="about-content">
+            <div class="about-pic-container">
                 <img src="https://via.placeholder.com/150" alt="Profile picture" class="about-pic" />
             </div>
-            <div class="about-details-container">
+            <div class="about-details">
                 <div class="about-containers">
                     <div class="details-container">
                         <i class="fas fa-briefcase icon"></i>
@@ -95,77 +95,97 @@
         <h1 class="title">Skills</h1>
         <div class="experience-details-container">
             <div class="skills-box">
-                <div class="column">
+                <div class="skills-container">
                     <div class="skill-item">
                         <i class="fas fa-chart-line icon"></i>
-                        <div>
+                        <div class="skill-details">
                             <h3>Data Visualization</h3>
-                            <p>Experienced</p>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 90%;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-robot icon"></i>
-                        <div>
+                        <div class="skill-details">
                             <h3>Machine Learning</h3>
-                            <p>Experienced</p>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 85%;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-code icon"></i>
-                        <div>
+                        <div class="skill-details">
                             <h3>Programming</h3>
-                            <p>Experienced</p>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 75%;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-chart-pie icon"></i>
-                        <div>
+                        <div class="skill-details">
                             <h3>Statistical Analysis</h3>
-                            <p>Experienced</p>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 80%;"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-database icon"></i>
+                        <div class="skill-details">
+                            <h3>Data Wrangling</h3>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 70%;"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="column">
-                    <div class="skill-item">
-                        <i class="fas fa-database icon"></i>
-                        <div>
-                            <h3>Data Wrangling</h3>
-                            <p>Intermediate</p>
-                        </div>
-                    </div>
+                <div class="skills-container">
                     <div class="skill-item">
                         <i class="fas fa-server icon"></i>
-                        <div>
+                        <div class="skill-details">
                             <h3>Big Data Technologies</h3>
-                            <p>Intermediate</p>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 60%;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-brain icon"></i>
-                        <div>
+                        <div class="skill-details">
                             <h3>Artificial Intelligence</h3>
-                            <p>Intermediate</p>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 75%;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-chart-line icon"></i>
-                        <div>
+                        <div class="skill-details">
                             <h3>Predictive Analytics</h3>
-                            <p>Intermediate</p>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 85%;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-language icon"></i>
-                        <div>
+                        <div class="skill-details">
                             <h3>Natural Language Processing</h3>
-                            <p>Intermediate</p>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 65%;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-project-diagram icon"></i>
-                        <div>
+                        <div class="skill-details">
                             <h3>Deep Learning</h3>
-                            <p>Intermediate</p>
+                            <div class="proficiency-bar">
+                                <div class="proficiency" style="width: 70%;"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -182,7 +202,7 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="https://via.placeholder.com/300" alt="Project 1" class="project-img" />
+                        <img src="https://via.placeholder.com/600x400" alt="Project 1" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Credit Card Fraud Detection</h2>
                     <div class="btn-container">
@@ -193,7 +213,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="https://via.placeholder.com/300" alt="Project 2" class="project-img" />
+                        <img src="https://via.placeholder.com/600x400" alt="Project 2" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Healthcare Networks for Stroke Prevention and Management</h2>
                     <div class="btn-container">
@@ -214,7 +234,7 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <i class="fas fa-envelope icon contact-icon email-icon"></i>
-                <p><a href="mailto:afnan.abdullahi375@gmail.com">afnan.abdullahi375@gmail.com</a></p>
+                <p><a href="mailto:email@example.com">email@example.com</a></p>
             </div>
             <div class="contact-info-container">
                 <i class="fab fa-linkedin icon contact-icon"></i>
@@ -241,3 +261,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
