--- a/index.html
+++ b/index.html
@@ -100,45 +100,35 @@
                         <i class="fas fa-chart-line icon"></i>
                         <div class="skill-details">
                             <h3>Data Visualization</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 90%;"></div>
-                            </div>
+                            <p>Experienced</p>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-robot icon"></i>
                         <div class="skill-details">
                             <h3>Machine Learning</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 85%;"></div>
-                            </div>
+                            <p>Experienced</p>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-code icon"></i>
                         <div class="skill-details">
                             <h3>Programming</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 75%;"></div>
-                            </div>
+                            <p>Experienced</p>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-chart-pie icon"></i>
                         <div class="skill-details">
                             <h3>Statistical Analysis</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 80%;"></div>
-                            </div>
+                            <p>Experienced</p>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-database icon"></i>
                         <div class="skill-details">
                             <h3>Data Wrangling</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 70%;"></div>
-                            </div>
+                            <p>Intermediate</p>
                         </div>
                     </div>
                 </div>
@@ -147,45 +137,35 @@
                         <i class="fas fa-server icon"></i>
                         <div class="skill-details">
                             <h3>Big Data Technologies</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 60%;"></div>
-                            </div>
+                            <p>Intermediate</p>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-brain icon"></i>
                         <div class="skill-details">
                             <h3>Artificial Intelligence</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 75%;"></div>
-                            </div>
+                            <p>Intermediate</p>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-chart-line icon"></i>
                         <div class="skill-details">
                             <h3>Predictive Analytics</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 85%;"></div>
-                            </div>
+                            <p>Intermediate</p>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-language icon"></i>
                         <div class="skill-details">
                             <h3>Natural Language Processing</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 65%;"></div>
-                            </div>
+                            <p>Intermediate</p>
                         </div>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-project-diagram icon"></i>
                         <div class="skill-details">
                             <h3>Deep Learning</h3>
-                            <div class="proficiency-bar">
-                                <div class="proficiency" style="width: 70%;"></div>
-                            </div>
+                            <p>Intermediate</p>
                         </div>
                     </div>
                 </div>
@@ -221,6 +201,17 @@
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                     <p>Constructed and analyzed a healthcare interaction network to optimize stroke prevention and management strategies, utilizing patient data and predictive models.</p>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="https://via.placeholder.com/600x400" alt="Project 3" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project Three</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
+                    </div>
+                    <p>Short description of Project Three.</p>
                 </div>
             </div>
         </div>
@@ -261,4 +252,3 @@
     <script src="scripts.js"></script>
 </body>
 </html>
-
